# testorc

./: CMakeLists.txt  test.cpp
ORC-1.6.0-SNAPSHOT-Linux/include/orc/: orc-config.hh
orc/orc/: ColumnPrinter.hh  Common.hh  Exceptions.hh  Int128.hh  MemoryPool.hh  OrcFile.hh  Reader.hh  Statistics.hh  Type.hh  Vector.hh  Writer.hh
